--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,11 @@ services:
       - "9001:9001"
     volumes:
       - ./config/mqtt/mosquitto.conf:/mosquitto/config/mosquitto.conf
+  publisher:
+    build:
+      context: ./publisher
+      dockerfile: ./Dockerfile
+    depends_on:
+      - mqtt
 volumes:
   influx-vol:
