:fire: reverse proxy http - compose: expose en vez de port - compose: nuevo servicio nginx - nginx: configuracion de servicio nginx - grafana: cambio en la configuraicon

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ services:
   grafana:
     image: grafana/grafana
     restart: always
-    ports:
-      - 3000:3000
+    expose:
+      - 3000
     volumes:
       - './config/grafana/grafana.ini:/etc/grafana/grafana.ini'
       - './config/grafana/datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml'
@@ -12,8 +12,8 @@ services:
   influxdb:
     image: influxdb:2.7
     restart: always
-    ports:
-      - 8086:8086
+    expose:
+      - 8086
     volumes:
       - influx-vol:/var/lib/influxdb2
     environment:
@@ -30,9 +30,9 @@ services:
     restart: always
     environment:
       - TZ=America/Buenos_Aires
-    ports:
-      - "8883:1883"
-      - "9001:9001"
+    expose:
+      - 8883
+      - 9001
     volumes:
       - ./config/mqtt/mosquitto.conf:/mosquitto/config/mosquitto.conf
   publisher:
@@ -51,5 +51,12 @@ services:
     depends_on:
       - influxdb
       - mqtt
+  nginx:
+    image: nginx:1.24
+    ports:
+      - 80:80
+    privileged: true
+    volumes:
+      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
 volumes:
   influx-vol:
