--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,14 @@ services:
     depends_on:
       - influxdb
       - mqtt
+  certgen:
+    build:
+      context: ./script-runner
+      dockerfile: ./Dockerfile
+    privileged: true
+    volumes:
+      - certs:/certificates/
+      - ./config/cert-gen/certs.sh:/docker-entrypoint.d/certs.sh
   nginx:
     image: nginx:1.24
     ports:
@@ -60,3 +68,4 @@ services:
       - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
 volumes:
   influx-vol:
+  certs:
