:fire: HTTPS reverse proxy - compose: conexion de nginx con volumen certs - compose: bint al puerto 443 - compose: dependencia de nginx con el generador de certificados - nginx: configuracion de los certificados en los 2 dominios - nginx: configuracion de redireccion en https

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -62,9 +62,13 @@ http {
     ssl_session_timeout 10m;
 
     server {
-        listen              80;
+        listen              443 ssl;
         # nombre de host (todo lo que termina en .localdev.me apunta a la pc local)
         server_name iot.localdev.me;
+        ssl_certificate /etc/ssl/private/iot.localdev.me.crt;
+        ssl_certificate_key /etc/ssl/private/iot.localdev.me.key;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -111,14 +115,29 @@ http {
 
     # influxdb tiene su propia URL por que no funciona en un subpath (todavia)
     server {
-      listen              80;
+      listen              443 ssl;
 
       server_name  influxdb.localdev.me;
+      ssl_certificate /etc/ssl/private/influxdb.localdev.me.crt;
+      ssl_certificate_key /etc/ssl/private/influxdb.localdev.me.key;
+      ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+      ssl_ciphers         HIGH:!aNULL:!MD5;
+
       location / {
         proxy_pass http://influxdb/;
       }
     }
+  # HTTP REDIRECT
+  server {
 
+    listen 80 default_server;
+
+
+    server_name _;
+
+
+    return 301 https://$host$request_uri;
+  }
 
 }
 
